--- a/index.html
+++ b/index.html
@@ -14,14 +14,13 @@
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
     <link rel="shortcut icon" href="Material da Landing Page/images/favicon.ico" type="image/x-icon">
     <link rel="manifest" href="/site.webmanifest">
-    <title>Reymond Education</title>
+    <title>Reyducation</title>
 </head>
 <body>
     <script src="script.js" defer></script>
     <header>
         <div id="title">
-            <h1>Reymond</h1>
-            <h1>Education</h1>
+            <h1>Reyducation</h1>
         </div>
 
 <main>
