--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         </aside>
 
         <article>
-            <img src="mulher-green-site.png" alt="imagem-estudo">
+            <img src="mulher-green-site.jpeg" alt="imagem-estudo">
         </article>
         
     </header>
