--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <h2>a melhor jornada</h2>
 
             <p class="sell">
-                Venha estudar com quem de fato gosta de ensinar, você terá um acompanhamento integral do seu desenvolvimento!
+                Venha estudar com quem de fato gosta de ensinar, você terá um <strong>acompanhamento</strong> integral do seu desenvolvimento!
             </p>
 
             <p class="sell">
