--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             </p>
 
             <p class="sell">
-                Você já pensou como seria incrível estudar inglês com um professor que acompanha o seu progresso dia após dia? 
+                Você já pensou como seria incrível estudar inglês com um professor que acompanha o seu <strong>progresso</strong> dia após dia? 
             </p>
             
             <p class="selling">
