--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 Se trata de uma metodologia que se adapta à forma que você aprende mais facilmente, incrível não?
             </p>
             <p class="sentence">
-                É a <strong>ÚNICA</strong> escola que se adapta a <strong class="you">VOCÊ!</strong>
+                É a <strong>ÚNICA</strong> escola que se <strong>adapta</strong> a <strong class="you">VOCÊ!</strong>
             </p>
             
             <form>
