--- a/index.html
+++ b/index.html
@@ -41,10 +41,10 @@
                 <strong>Isso é exatamente o que temos para você!</strong>
             </p>
             <p class="sell">
-                Se trata de uma metodologia que se adapta à forma que você aprende mais facilmente, incrível não?
+                Se trata de uma metodologia que se <strong>adapta</strong> à forma que você aprende mais facilmente, incrível não?
             </p>
             <p class="sentence">
-                É a <strong>ÚNICA</strong> escola que se <strong>adapta</strong> a <strong class="you">VOCÊ!</strong>
+                É a <strong>ÚNICA</strong> escola que se adapta a <strong class="you">VOCÊ!</strong>
             </p>
             
             <form>
