--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
             
             <div class="item-botao">
 
-                <a href="https://wa.me/+5592992296101" class="botao-zap" target="_blank">ENTRE EM CONTATO
+                <a href="https://api.whatsapp.com/send/?phone=5592992296101&text=Quero+ser+aluno(a)+!&type=phone_number&app_absent=0" class="botao-zap" target="_blank">ENTRE EM CONTATO
                     <svg xmlns="https://cdn.awsli.com.br/380x380/809/809422/produto/170351839/a5c9d25c87.jpg" width="21" height="21" viewBox="0 0 21 21">
                         <path d="M10.5,0H10.5A10.493,10.493,0,0,0,2,16.654L.69,20.555l4.036-1.29A10.5,10.5,0,1,0,10.5,0Zm6.11,14.827a2.963,2.963,0,0,1-2.061,1.482c-.549.117-1.265.21-3.678-.79A13.154,13.154,0,0,1,5.646,10.9,6,6,0,0,1,4.4,7.735,3.352,3.352,0,0,1,5.473,5.179,1.526,1.526,0,0,1,6.547,4.8c.13,0,.247.007.352.012.308.013.463.031.667.518.253.61.87,2.117.944,2.272a.625.625,0,0,1,.045.568,1.815,1.815,0,0,1-.34.482c-.155.178-.3.315-.457.507-.142.167-.3.345-.123.654a9.32,9.32,0,0,0,1.7,2.117A7.719,7.719,0,0,0,11.8,13.451a.664.664,0,0,0,.74-.117,12.7,12.7,0,0,0,.82-1.087.586.586,0,0,1,.753-.228c.283.1,1.784.84,2.092.994s.512.228.587.358A2.615,2.615,0,0,1,16.612,14.827Z" fill="#fff">
                         </path>
