--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                     &#10003;
                 </a>
 
-                <p>Aulas 100%<br> <strong> Online</strong></p>
+                <p>Aulas<br><strong>Online ou Presencial</strong></p>
 
             </div>          
             
